<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    tools:context=".game.TypingGame.TypingGame"
    android:id="@+id/main_model">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/introduction"
                android:text="@string/textview"
                android:layout_gravity="fill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>

        <EditText
            android:id="@+id/user_input"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip"
            android:textSize="20sp">
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/feedback"
                android:layout_weight="10"
                android:layout_gravity="fill"
                android:text="@string/tip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp">
            </TextView>

            <Button
                android:id="@+id/button_submit"
                android:layout_weight="1"
                android:layout_gravity="fill"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:text="@string/button_submit">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_level"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="fill"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:text="@string/button_level">
            </Button>

            <Button
                android:id="@+id/button_quit"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="fill"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="10dp"
                android:text="@string/button_quit"
                android:textSize="20sp">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>